# django-strawberry-framework

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  ATTENTION.md  BACKLOG.md  BETTER.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GOAL.md  KANBAN.html  KANBAN.json  KANBAN.md  KANBAN_APP_PLAN.md  LICENSE  LIFECYCLE-PROTOTYPE.html  LIFECYCLE.html  README.md  SECURITY.md  START.md  TODAY.md  auth-session-lifecycle-hardening-plan.md  conftest.py  docker-compose.postgres.yml  feedback2.md  feedback3.md  get_queryset-visibility-boundary-plan.md  kanban-improvement-plan.md  kanban-section-other-report.md  line_count.py  optimizer-improvement-plan.md  package-spec-attribution.md  pyproject.toml  pytest.ini  to-many-search-optimizer-reproduction.md  whitepaper.md
.github/workflows/: django.yml  kanban-pages.yml  postgres.yml
django_strawberry_framework/: __init__.py  _cross_web_patches.py  _django_patches.py  _strawberry_patches.py  apps.py  conf.py  connection.py  converters.py  exceptions.py  keyset.py  list_field.py  optimizer.py  permissions.py  registry.py  relay.py  review.md  routers.py  scalars.py  schema.py  sets_mixins.py  types.py
django_strawberry_framework/auth/: __init__.py  mutations.py  queries.py  review.md  sessions.py
django_strawberry_framework/extensions/: __init__.py  debug.py  review.md
django_strawberry_framework/filters/: __init__.py  base.py  factories.py  inputs.py  review.md  sets.py
django_strawberry_framework/forms/: __init__.py  converter.py  inputs.py  resolvers.py  review.md  sets.py
django_strawberry_framework/management/: __init__.py  review.md
django_strawberry_framework/middleware/: __init__.py  debug_toolbar.py
django_strawberry_framework/mutations/: __init__.py  fields.py  inputs.py  permissions.py  resolvers.py  review.md  sets.py
django_strawberry_framework/optimizer/: __init__.py  _context.py  extension.py  field_meta.py  hints.py  join_taxonomy.py  lateral_fetch.py  nested_fetch.py  nested_planner.py  plans.py  predicates.py  review.md  selections.py  single_parent_fetch.py  walker.py
django_strawberry_framework/orders/: __init__.py  base.py  factories.py  inputs.py  review.md  sets.py
django_strawberry_framework/rest_framework/: __init__.py  hook_context.py  inputs.py  resolvers.py  review.md  serializer_converter.py  sets.py
django_strawberry_framework/test/: __init__.py  _wrap.py
django_strawberry_framework/testing/: __init__.py  _wrap.py  client.py  relay.py  review.md
django_strawberry_framework/types/: __init__.py  base.py  converters.py  definition.py  finalizer.py  relations.py  relay.py  resolvers.py  review.md
django_strawberry_framework/utils/: __init__.py  connections.py  converters.py  errors.py  imports.py  input_values.py  inputs.py  permissions.py  querysets.py  relations.py  review.md  strings.py  typing.py  write_transaction.py  write_values.py
docs/: DRY.md  FEATURES.md  GLOSSARY.md  GLOSSARY2.md  PLAN-trac-37064-database-teardown.md  README.md  TEMP-trac-37064-test-plan.md  TREE.md  alpha-review-feedback.md  diff-spec-relay_interfaces.diff  feedback.md  feedback2.md  plan-registry-helpers.md  row-preserving-predicates-part1-plan.md  spec-013-deferred_scalars-0_0_6.md  spec-014-meta_primary-0_0_6-terms.csv  spec-014-meta_primary-0_0_6.md  spec-015-consumer_overrides_scalar-0_0_6-terms.csv  spec-015-consumer_overrides_scalar-0_0_6.md  spec-016-list_field-0_0_7.md  spec-017-apps-0_0_7.md  spec-018-export_schema-0_0_7.md  spec-019-multi_db-0_0_7-terms.csv  spec-019-multi_db-0_0_7.md  spec-020-scalar_map_helper-0_0_7-terms.csv  spec-020-scalar_map_helper-0_0_7.md  spec-021-filters-0_0_8-terms.csv  spec-021-filters-0_0_8.md  spec-028-orders-0_0_8-terms.csv  spec-028-orders-0_0_8.md  spec-029-consumer_dx_cleanup-0_0_9-terms.csv  spec-029-consumer_dx_cleanup-0_0_9.md  spec-030-connection_field-0_0_9-terms.csv  spec-030-connection_field-0_0_9.md  spec-031-globalid_encoding-0_0_9-terms.csv  spec-031-globalid_encoding-0_0_9.md  spec-032-full_relay-0_0_9-terms.csv  spec-032-full_relay-0_0_9.md  spec-033-connection_optimizer-0_0_9-terms.csv  spec-033-connection_optimizer-0_0_9.md  (+48 more)
docs/SPECS/: NEW.md  NEXT.md  spec-001-django_types-0_0_1-terms.csv  spec-001-django_types-0_0_1.md  spec-002-optimizer-0_0_2-terms.csv  spec-002-optimizer-0_0_2.md  spec-003-optimizer_nested_prefetch_chains-0_0_2-terms.csv  spec-003-optimizer_nested_prefetch_chains-0_0_2.md  spec-004-optimizer_beyond-0_0_3-terms.csv  spec-004-optimizer_beyond-0_0_3.md  spec-005-django_type_contract-0_0_3-terms.csv  spec-005-django_type_contract-0_0_3.md  spec-006-public_surface-0_0_3-terms.csv  spec-006-public_surface-0_0_3.md  spec-007-onboarding_docs_spec_consolidation-0_0_4-terms.csv  spec-007-onboarding_docs_spec_consolidation-0_0_4.md  (+76 more)
scripts/: _bench_common.py  _kanban_lib.py  bench_nested_fetch.py  bench_optimizer_walk.py  bench_plan_cache.py  bug_hunt.py  build_glossary_md.py  build_kanban_dashboard.py  build_kanban_html.py  build_kanban_md.py  build_kanban_package_file_constants.py  build_kanban_tracked_path_constants.py  build_tree_md.py  check_alpha_parity.py  check_spec_glossary.py  check_trailing_commas.py  clean_up.py  export_dry_review.py  import_glossary_md.py  import_kanban_package_file_links.py  list_package_python_changes_by_commit.py  review_changed_python_diffs_against_head.py  review_current_from_commit.py  review_diff_from_commit.py  review_historical_package_snapshot_at_commit.py  review_inspect.py
tests/: __init__.py  _relay_bypass.py  _soft_dependency.py  conftest.py  test_admin.py  test_apps.py  test_bug_hunt.py  test_build_kanban_html.py  test_build_tree_md.py  test_choice_enums.py  test_clean_up.py  test_connection.py  test_cross_web_patches.py  test_django_patches.py  test_django_types.py  test_exceptions.py  test_export_dry_review.py  test_keyset.py  test_keyset_connection.py  test_lateral_pg_parity.py  test_list_field.py  test_models.py  test_optimizer.py  test_permissions.py  test_registry.py  test_relay_connection.py  test_relay_node_field.py  test_routers.py  test_scalars.py  test_strawberry_patches.py
(+636 files in other folders)
