# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[project]
name = "django-strawberry-framework"
version = "0.0.13"
description = "A DRF-inspired Django integration framework for Strawberry GraphQL — filtering, ordering, aggregation, and permissions"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10,<4.0"
authors = [
    { name = "Rio Weber", email = "riodweber@gmail.com" },
]
maintainers = [
    { name = "Rio Weber", email = "riodweber@gmail.com" },
]
keywords = ["django", "strawberry", "graphql", "filters", "framework", "drf"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
]
dependencies = [
    "Django>=5.2",
    "strawberry-graphql>=0.262.0",
    "django-filter>=25.2",
    "wrapt>=2.0.1",
]

[project.urls]
Homepage = "https://pypi.org/project/django-strawberry-framework"
Repository = "https://github.com/riodw/django-strawberry-framework"
Issues = "https://github.com/riodw/django-strawberry-framework/issues"

[dependency-groups]
dev = [
    "djangorestframework>=3.17.0",
    "faker>=33.0.0",
    "pillow>=10.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.0.0",
    # channels is a SOFT dependency of the package ([project].dependencies is
    # untouched); the dev group installs it (with Channels' own [daphne] extra,
    # required only to IMPORT channels.testing) so tests/test_routers.py can
    # exercise the channels-present path (spec-041 Decision 5).
    "channels[daphne]>=4.3.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.5.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.0",
]
# Postgres test tier (opt-in): ``uv sync --group pg`` adds the driver the
# ``FAKESHOP_PG_DSN`` settings branch needs. Kept out of ``dev`` so the
# default sqlite workflow carries no compiled Postgres dependency.
pg = [
    "psycopg[binary]>=3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["django_strawberry_framework"]

[tool.hatch.build.targets.sdist]
# Ship the package, tests, and key metadata only. Without this, hatchling's default
# sdist tars the whole tree — internal docs/SPECS, examples/ (with sqlite DBs), and
# any local .claude/ state — into a ~7 MB archive.
include = [
    "/django_strawberry_framework",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 99
target-version = "py310"
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    "venv",
    ".venv",
    "env",
    ".pytest_cache",
    ".coverage",
    "htmlcov",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "ANN",    # flake8-annotations
    "A",      # flake8-builtins
    "ARG",    # flake8-unused-arguments (contractual resolver/fixture args carry noqa)
    "ASYNC",  # flake8-async: async/await antipatterns (blocking calls in async, etc.)
    "B",      # flake8-bugbear: likely bugs (mutable defaults, bad except order, etc.)
    "N",      # pep8-naming
    "C4",     # flake8-comprehensions
    "COM812", # flake8-commas: missing-trailing-comma (pairs with magic trailing comma in formatter)
    "D",      # pydocstyle
    "ERA",    # eradicate
    "FLY",    # flake8-flynt: static str .join() -> f-string
    "ISC003", # explicit-str-concat only (ISC001/002 conflict with the formatter)
    "PERF",   # Perflint: perf antipatterns (try/except in loop, manual comprehension)
    "PLE",    # Pylint errors only (E-level; PLR/PLW/PLC excluded as noisy/opinionated)
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise: raise hygiene (no redundant parens on bare raise)
    "RUF",    # Ruff-specific: unused-noqa (RUF100), mutable-class-default (RUF012), ...
    "SIM",    # flake8-simplify
    "TRY004", # tryceratops: raise TypeError (not a vanilla error) on a type-check failure
    "UP",     # pyupgrade
]
ignore = [
    "ANN002", # Missing type annotation for *args
    "ANN003", # Missing type annotation for **kwargs
    "ANN401", # Any type annotation
    "D107",   # Missing docstring in __init__
    "D417",   # Missing argument description in docstring
    "RUF001", # ambiguous-unicode in strings — em-dashes/arrows are intentional here
    "RUF002", # ambiguous-unicode in docstrings — ditto
    "RUF003", # ambiguous-unicode in comments — ditto
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
# B018 (useless-expression): bare ``factory.arguments`` triggers the lazy
# build/raise under test. RUF012 (mutable-class-default): test/example fixture
# classes use mutable attrs idiomatically. PERF: perf of test/example code is
# irrelevant. ARG: in test code an "unused argument" is almost always an
# injected pytest fixture (used for its side effect) or a framework-fixed
# resolver/hook signature — both are required to be present, so ARG is noise
# here; it stays enforced on the PACKAGE, where an unused named arg is a real
# signal. RUF043 (pytest match= metacharacters): plain `match="...with a
# period..."` is the dominant convention (147 vs 20 raw) and matches error
# substrings fine; forcing raw strings would tax every test.
"tests/**/*.py" = ["D", "ANN", "ERA001", "F841", "SIM117", "SIM118", "E501", "N802", "N806", "B018", "RUF012", "PERF", "RUF043", "ARG"]
"examples/**/*.py" = ["D", "ANN", "ERA001", "F841", "SIM117", "SIM118", "E501", "UP031", "N806", "B018", "RUF012", "PERF", "RUF043", "ARG"]
# PERF: one-shot build/maintenance scripts are not a performance surface.
"scripts/**/*.py" = ["PERF"]
"**/migrations/*.py" = ["D100", "D101", "D104"]
"**/views.py" = ["D101"]
"**/urls.py" = ["D100"]
"**/admin.py" = ["D101"]

[tool.ruff.lint.flake8-unused-arguments]
# Unused ``*args`` / ``**kwargs`` are signature padding for protocol/forward
# compatibility (Django ``handle(self, *args, **options)``, ``get_queryset(...,
# **kwargs)``, signal receivers), not a real smell — don't flag them. ARG then
# only fires on unused *named* args, where it carries signal.
ignore-variadic-names = true

[tool.ruff.lint.isort]
known-first-party = ["django_strawberry_framework"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.pycodestyle]
# The formatter wraps code at line-length (99); E501 only flags lines past 110
# -- the grace covers long strings/comments the formatter cannot break.
max-line-length = 110

[tool.coverage.run]
source = ["django_strawberry_framework"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
